--- a/help.html
+++ b/help.html
@@ -216,7 +216,7 @@ overflow-x:hidden;
 #menu1 {
 position: absolute;
 	left: %;
-	top: 30%;
+	top: 28%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -226,7 +226,7 @@ z-index: 2;
 #menu2 {
 position: absolute;
 	left: 23%;
-	top: 1%;
+	top: 0.3%;
 width: 560px;
 height: 35px;
 overflow-y:hidden;
@@ -236,7 +236,7 @@ z-index: 4;
 #menu3 {
 position: absolute;
 	left: 85%;
-	top: 50%;
+	top: 47%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -246,15 +246,30 @@ z-index: 2;
 #stuff {
 position: absolute;
 	left: 18.5%;
-	top: 12%;
+	top: 10.5%;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
 z-index: 6;
  }
+#aaa {
+position: absolute;
+	left: 46.5%;
+	top: 96%;
+width: 100px;
+height: 100px;
+overflow-x:hidden;
+z-index: 3;
+ }
 </style>
+
 <div id="base">
-<img src="https://i.imgur.com/fEKbdEW.png"/>
+
+<div id="aaa">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
+
+<img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
 <p style="font-size:10px;line-height:50%;"><br><br>
@@ -933,8 +948,8 @@ function getPosition(el) {
 <br><br><center><img src="https://i.imgur.com/9EkFzLw.png"></center>
 <br>
 <font color="#b78f8f">
-* i don't own some of the tips ; some are tumblr posts and from <a id="linkbjinho" href="https://sulyia.deviantart.com" target="_blank">sulyia</a> ;<br>
-* do you have something important to add ? please tell me !</font>
+<font size="1">※</font> i don't own some of the tips ; some are tumblr posts and from <a id="linkbjinho" href="https://sulyia.deviantart.com" target="_blank">sulyia</a> ;<br>
+<font size="1">※</font> do you have something important to add ? please tell me !</font>
 <br><br>
 
 
@@ -949,11 +964,6 @@ function getPosition(el) {
 </div>
 </div>
 </div>
-
-<div style="position: absolute; left: 46.5%; top: 85%;">
-<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
-</div>
-
 
 
 
