--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -216,7 +216,7 @@ overflow-x:hidden;
 #menu1 {
 position: absolute;
 	left: %;
-	top: 30%;
+	top: 28%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -226,7 +226,7 @@ z-index: 2;
 #menu2 {
 position: absolute;
 	left: 23%;
-	top: 1%;
+	top: 0.3%;
 width: 560px;
 height: 35px;
 overflow-y:hidden;
@@ -236,7 +236,7 @@ z-index: 4;
 #menu3 {
 position: absolute;
 	left: 85%;
-	top: 50%;
+	top: 47%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -246,15 +246,30 @@ z-index: 2;
 #stuff {
 position: absolute;
 	left: 18.5%;
-	top: 12%;
+	top: 10.5%;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
 z-index: 6;
  }
+#aaa {
+position: absolute;
+	left: 46.5%;
+	top: 96%;
+width: 100px;
+height: 100px;
+overflow-x:hidden;
+z-index: 3;
+ }
 </style>
+
 <div id="base">
-<img src="https://i.imgur.com/fEKbdEW.png"/>
+
+<div id="aaa">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
+
+<img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
 <p style="font-size:10px;line-height:50%;"><br><br>
@@ -283,8 +298,8 @@ z-index: 6;
 
 <img width="300px" height="auto" style="position: absolute; left: 148px; top: 5px; overflow-y:hidden; overflow-x:hidden;" src="https://i.imgur.com/9ckchgN.png"/>
 
-<div style= "font-family: Verdana; font-size:8px; padding-left: 29%; padding-right: 25%;">
-<div style="top:30px; padding: 4px; position: absolute; width: 260px; height: 350px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 130%">
+<div style= "font-family: Verdana; font-size:8px; padding-left: 28%; padding-right: 25%;">
+<div style="top:30px; padding: 8px; position: absolute; width: 260px; height: 350px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 130%">
 
 <center><img width="200px" height="auto" src="https://i.imgur.com/2am0Bdu.png"></center><br>
 <br>
@@ -464,10 +479,6 @@ june . 27 . 2018<br>
 </div>
 </div>
 </div>
-</div>
-
-<div style="position: absolute; left: 46.5%; top: 85%;">
-<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
 </div>
 
 
