--- a/status.html
+++ b/status.html
@@ -248,7 +248,7 @@ position: absolute;
 	left: 18.5%;
 	top: 10.5%;
 width: 594px;
-height: 433px;
+height: 435px;
 overflow-x:hidden;
 z-index: 6;
  }
@@ -326,6 +326,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>03.01.19</sup></font> <font color="#a0acbc">→</font>　this layout makes me so happy !
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>02.14.19</sup></font> <font color="#9cb7b7">→</font>　♡ ♡ hug me ♡ ♡
 
 <br><br><br>
@@ -351,9 +354,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>10.23.18</sup></font> <font color="#c48d8d">→</font>　shy bunny store is open ♡ !!
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>10.11.18</sup></font> <font color="#a0acbc">→</font>　i want to be tiny & sleep in your<br>　　　　　　　　　pocket
 
 
 </div>
